1.1.0-BETA (Jan 14, 2011)
	- Fix: Faster StringHelper.pad (more than 50X)

1.1.0-SNAPSHOT (Jan 8, 2011)
	- New: Response templates now use id.web.michsan.csimulator.Resolver
	- New: Downgrade to support Java 5
	 
1.0.3-GA (Jan 5, 2011)
	- Fix: Global delay is now effective
	
1.0.3-RC2 (Jan 4, 2011)
	- Fix: Antlr library is out of documentation
	- New: CHANGELOG.txt is added

1.0.3-RC1 (Dec 14, 2010)
	- Fix: Fields will be padded first before doing substring
		
1.0.3-BETA (Nov 16, 2010)
	- New: Implemented complex condition e.g. f43:Ichsan && (f40:Hello || f50:500)