@@ -95,7 +95,7 @@
 					<stylesheet>maven</stylesheet>
 					<excludePackageNames>id.web.michsan.csimulator.util.grammar.*</excludePackageNames>
 					<links>
-						<link>http://download.oracle.com/javase/6/docs/api</link>
+						<link>http://download.oracle.com/javase/1.5.0/docs/api</link>
 					</links>
 				</configuration>
 				<executions>
